# hub-chain-poc

./: README.md  deno.jsonc  dprint.json
generator/: executor.wasm  mod.ts
relay/: Dockerfile  client-conf.ts  mod.ts
trigger/: Cargo.toml
trigger/src/: lib.rs
ui/: Dockerfile  index.html  package.json  pnpm-lock.yaml  shared.ts  tsconfig.app.json  vite.config.ts
ui/src/: App.vue  main.ts  shared.ts  state.ts  utils.ts
ui/src/components/: Chain.vue  PromiseState.vue  TransferForm.vue  VAccountId.vue  VNumberChange.vue
