[package]
name = "hub-chain-trigger"
edition = "2024"

[features]
debug = []

[lib]
crate-type = ['cdylib']

[dependencies]
iroha_trigger = { git = "https://github.com/hyperledger-iroha/iroha.git", rev = "d77d19d2" }
iroha_crypto = { git = "https://github.com/hyperledger-iroha/iroha.git", rev = "d77d19d2" }

dlmalloc = { version = "0.2.6", features = ["global"] }
panic-halt = "0.2.0"
eyre = "0.6.12"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0.143"
